--- a/site/index.html
+++ b/site/index.html
@@ -90,21 +90,47 @@ Theme by GitBook
 
 
 
-<h1 id="welcome-to-mkdocs">Welcome to MkDocs</h1>
-<p>For full documentation visit <a href="https://www.mkdocs.org">mkdocs.org</a>.</p>
-<h2 id="commands">Commands</h2>
+<h1 id="polyu">PolyU课程攻略共享计划</h1>
+<h2 id="_1">前言</h2>
+<p>大学生活中，我们会接触到许多不同的课程和学习资源。有时候，我们需要找电子书或教材，却要花费大量时间和精力在网上搜索；有时候，我们需要历年试卷或者作业答案，却只能从学长学姐那里口口相传；有时候，我们在课程结束后才恍然领悟到学习技巧，却已经错过了更轻松的学习体验……</p>
+<p>我也曾经努力收集各种课程资料，但最终仍然错过了一些重要信息，这让我深感遗憾与不安。我也曾经在课程结束后才获得一些经验和总结，但这些宝贵的经验往往只能被自己消耗在遗忘中，无法与他人共享。</p>
+<p>正是基于这种遗憾，我希望创建这个项目，致力于将那些难以获得、不确定的学习资料和经验变得公开、易于获取，并与大家共同完善和积累。</p>
+<p>我相信，如果前人已经走过的弯路，后人就无需再走。这种信念也是我创建这个项目的初衷。</p>
+<h2 id="_2">特性</h2>
+<p>本项目旨在收集、共享并完善以下内容：</p>
 <ul>
-<li><code>mkdocs new [dir-name]</code> - Create a new project.</li>
-<li><code>mkdocs serve</code> - Start the live-reloading docs server.</li>
-<li><code>mkdocs build</code> - Build the documentation site.</li>
-<li><code>mkdocs -h</code> - Print help message and exit.</li>
+<li>选课攻略</li>
+<li>电子版教材</li>
+<li>复习资料</li>
+<li>以及其他相关学习资源</li>
 </ul>
-<h2 id="project-layout">Project layout</h2>
-<pre><code>mkdocs.yml    # The configuration file.
-docs/
-    index.md  # The documentation homepage.
-    ...       # Other markdown pages, images and other files.
-</code></pre>
+<h2 id="_3">平台</h2>
+<p>我们选择使用GitHub作为项目平台的原因有以下几点考虑：</p>
+<p>GitHub项目具有良好的文件组织结构，每个目录都可以附带一个README文件，方便整理和查找资源。
+GitHub提供便捷的Issue和Pull Request功能，方便用户提供反馈、贡献内容，并进行质量监督和调整。
+我们相信，通过大家的关注、维护和贡献，才能让这个香港理工大学课程共享平台不断发展和壮大。</p>
+<h2 id="_4">贡献</h2>
+<p>欢迎各位同学的贡献！</p>
+<p>欢迎贡献！</p>
+<p>欢迎贡献！</p>
+<p>我们重复三遍，因为它非常重要。</p>
+<p>无论是提交Issue、Pull Request、纠错、提供学习资料，还是分享选课攻略和考试经验，我们都非常欢迎！</p>
+<p>只有大家的关注、维护和贡献，才能让这个香港理工大学课程共享平台持续存在和发展。</p>
+<h2 id="_5">操作方法</h2>
+<p>提交Pull Request：首先Fork本项目，在GitHub网页端点击"Upload File"按钮上传您的文件，并发起Pull Request。请留意项目文件组织的结构。</p>
+<p>如果您对Git不太熟悉，我们建议您先备份您的项目，然后重新Fork、上传文件并提交Pull Request。</p>
+<p>如果您对Git及其工作原理较为熟悉，并愿意花费时间和流量折腾，您可以尝试在Fork出的项目上进行rebase操作，以消除与主分支在历史上的冲突。</p>
+<h2 id="_6"></h2>
+<p>提醒
+有些朋友在提交Pull Request时可能会注意到自己的Fork与我们的主分支有数十甚至上百个不同的commit。如果出现这种情况，您可以考虑以下两种解决方案：</p>
+<p>如果对Git不太熟悉，我们建议（在备份完成后）先删除您的项目，重新Fork、上传文件并重新提交Pull Request。
+如果对Git及其工作原理较为熟悉（而且愿意花费时间和流量折腾），您可以尝试在Fork出的项目上进行rebase操作，消除与主分支在历史上的冲突。</p>
+<h2 id="_7">警告</h2>
+<p>以下内容不适合上传到平台。如果您认为这些内容对资源的完整性有所影响，请优先考虑将其放在学校内部的资源平台，或与教师联系并由教师发布。我们建议您编写一个README文档，提供一些链接或指引，以帮助用户找到这些资源。</p>
+<p>盗版电子书/付费电子书
+盗版/破解版/绿色版付费软件及其安装包
+教师主页列出的内容（请在获得教师许可后上传）</p>
+<p>如果您认为该项目中的某些文件侵犯了您的权益，请通过发送邮件与我们联系。我们将彻底清除这些文件。</p>
 
 
 </section>
